--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     /* align-items: center; */
     background-color: gray;
     color: white;
